--- a/client/src/App.css
+++ b/client/src/App.css
@@ -9,10 +9,7 @@ body,
 }
 
 .main-container {
-  background: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.418)),
-    url("https://hdwallpaper20.com/wp-content/uploads/2017/07/wallpaper-wp4001752.jpg");
-  background-size: cover;
-  background-position: center;
+  background: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.418));
 }
 
 .main-container {
@@ -21,6 +18,10 @@ body,
   justify-content: center;
   align-items: center;
   flex-direction: column;
+}
+
+.search-header {
+  color: white;
 }
 
 .search {
